Changes for PDF

--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,22 @@
   font-family: Arial, sans-serif; /* Or your preferred font */
   font-size: 16px; /* Optional: set your desired font size */
 }
+
+@page {
+  margin: 20mm;
+  @top-center {
+      content: element(print-header);
+  }
+  @bottom-center {
+      content: element(print-footer);
+  }
+  button {
+    display: none;
+    }
+}
+
+.print-header, .print-footer {
+  font-family: Arial, sans-serif;
+  font-size: 12px;
+  text-align: center;
+}
