Changes for date picker , fixed someother issues for toggle look and feel

--- a/src/page.scss
+++ b/src/page.scss
@@ -246,3 +246,11 @@ margin-bottom: 15px;
   font-weight: bold;
 }
 
+.cds--toggle__label-text {
+  padding: 10px 0px;
+  font: initial;
+  font-weight: normal;
+  font-family: $default-font-family;
+  font-size: $default-font-size;
+  color: #000; 
+}
