--- a/src/print.css
+++ b/src/print.css
@@ -4,6 +4,15 @@
     display: block; /* Show only during printing */
   }
 
+  .header-title-print {
+    color: #000;
+    text-align: right;
+    font-family: "BC Sans";
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    
+  }
   /* Hide buttons and other unwanted elements */
   button,
   .no-print {
@@ -43,7 +52,7 @@
       
     }
     size: A4; /* Options: A4, Letter, etc. */
-    margin: 1in 0.25in 1in 0.25in;
+    margin: 10mm 10mm 20mm 10mm; /* top right bottom left */
     /* Footer styling */
   }
 
@@ -61,12 +70,13 @@
     gap: 10px;
     
     padding: 10px;
-    page-break-inside: avoid;
+    /*page-break-inside: avoid;*/
+    break-after: avoid;
     
   }
 
   .group-item-container {
-    page-break-inside: avoid;
+    page-break-inside: avoid;    
   }
 
   /* Dynamic column styling based on JSON */
@@ -149,7 +159,7 @@
     white-space: normal;
     overflow-wrap: break-word; /* Ensure text wraps */
        
-    text-align: center;
+    text-align: left;
     vertical-align: middle;      /* Center text horizontally */    
     border: 1px solid #ccc;
     min-height: 45px;
@@ -194,5 +204,23 @@
       break-before: page; /* Modern browsers */
       page-break-before: always; /* Fallback for older browsers */
     }
+
+    .content-wrapper {     
+    display: flex;
+    width: 100%;
+    padding: 0px;
+    flex-direction: column;    
+    gap: 42px;
+    }
+    .header-section {      
+      display: flex;
+      width: 100%;
+      padding: 0px;  
+      display: flex;
+      flex-wrap: wrap;
+      align-items: flex-start;
+      gap: 10px;  
+    } 
+      
     
 }
