--- a/src/page.scss
+++ b/src/page.scss
@@ -1,5 +1,6 @@
 :root {
   --border-color: #ccc;
+  --border-width: 1px solid;
   --fixed-bg-color: #fff;
   --box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   --z-index-top: 1000;
@@ -14,6 +15,7 @@
 
 // Use CSS variables in SCSS
 $border-color: var(--border-color);
+$border-width: var(--border-width);
 $fixed-bg-color: var(--fixed-bg-color);
 $box-shadow: var(--box-shadow);
 $z-index-top: var(--z-index-top);
@@ -68,7 +70,7 @@ html, body {
 }
 
 .group-item-container {
-  border: 1px solid $border-color;
+  border: $border-width $border-color;
   padding: 15px;
   //margin: 20px 0;
   margin-bottom: 15px;
