--- a/src/print.css
+++ b/src/print.css
@@ -4,14 +4,75 @@
     display: block; /* Show only during printing */
   }
 
+  .full-frame{
+    display: flex;
+    height: 792px;
+    padding: 36px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+    flex: 1 0 0;
+    background: #FFF;
+  }
+
+ .header-image{
+    display: flex;
+    width: 540px;
+    align-items: center;
+    gap: 10px;
+    border-bottom: 1px solid #919191;
+    background: #FFF;
+  }
+
+  .header-image-only {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 12.5px;
+
+  }
+  
+
   .header-title-print {
-    color: #000;
+    /*color: #000;
     text-align: right;
     font-family: "BC Sans";
     font-size: 22px;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 700;*/
+    color: #000;
+    text-align: right;
+    /* Print/Headings/Form Title */
+    font-family: "Noto Sans";
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    /*border: 1px solid #000;*/
     
+  }
+
+  .form-title{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /*align-items: flex-end;*/
+    flex: 1 0;
+    /*align-self: stretch;
+    border: 1px solid #000;*/
+  }
+
+  .header-form-id-print{
+    color: #000;
+    text-align: right;
+    /* Print/Body/Label */
+    font-family: "Noto Sans";
+    font-size: 11px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 150%; /* 16.5px */
+    letter-spacing: 0.32px;
+    /*border: 1px solid #000;*/
   }
   /* Hide buttons and other unwanted elements */
   button,
@@ -52,31 +113,31 @@
       
     }
     size: A4; /* Options: A4, Letter, etc. */
-    margin: 10mm 10mm 20mm 10mm; /* top right bottom left */
+    margin: 0.5mm 10mm 20mm 10mm; /* top right bottom left */
     /* Footer styling */
-  }
-
-  
-  .carbon-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr; /* Adjust as needed */
-    gap: 1rem;
   }
 
   /* Keep grouped fields together */
 
   .group-container {
-    display: grid;
-    gap: 10px;
-    
+    /*display: grid;
+    gap: 10px;    
     padding: 10px;
     /*page-break-inside: avoid;*/
     break-after: avoid;
+    gap: 0px !important; /* Adjust gap for print */
+    padding: 0px !important;
     
   }
 
   .group-item-container {
-    page-break-inside: avoid;    
+    page-break-inside: avoid; 
+    font-weight: normal; 
+    font-family: "Noto Sans" !important;  
+    font-size: 13px !important;
+    gap: 0px !important; /* Adjust gap for print */
+    padding: 0px !important;
+    border: 0px !important;
   }
 
   /* Dynamic column styling based on JSON */
@@ -90,19 +151,6 @@
 
   .group-container[data-print-columns="3"] {
     grid-column: span 3 !important;
-  }
-
-  .field-container {
-    display: flex;
-    flex-direction: column;
-    all: unset; /* Clears competing styles */
-    padding: 5px;
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-    word-break: break-word;
-    white-space: normal; /* Allow wrapping */
-    font-size: 2pt;
-    grid-column: span 4;
   }
 
   /* Adjust based on the data-print-columns attribute */
@@ -131,16 +179,21 @@
     padding: 5px; /* Add padding for readability */
   }
 
-  .cds--row {
-    display: grid !important; /* Revert to grid for print */
-    grid-template-columns: repeat(4, 1fr) !important;
-    gap: 15px !important; /* Adjust gap for print */
+  .cds--row.cds--row {   
+    gap: 0px !important; /* Adjust gap for print */
   }
 
+  
   .group-fields-grid {
     display: grid !important; /* Revert to grid for print */
     grid-template-columns: repeat(4, 1fr) !important;
-    gap: 15px !important;
+    gap: 0px !important;
+    padding: 0px !important;
+    
+  }
+
+  .group-fields-grid.group-fields-grid {
+    gap: 0px !important; /* Adjust gap for print */
   }
 
   /* Text styles */
@@ -152,32 +205,27 @@
     font-size: 12pt;
   }
 
-  .cds--text-input__field-wrapper {
-    font-size: 14px; /* Adjust font size for print */
-    padding:15px;
+  .field_value-wrapper-print {
+    font-size: 13px !important;
+    font-weight: 300 !important;
+    display: flex;
+    width: 70%;
+    min-height: 24px;
+    padding: 2px 10px;
+    align-items: flex-start;
+    /*gap: 10px;*/
+    border-bottom: 1px solid #919191;
+    align-self: stretch;
     word-wrap: break-word;
     white-space: normal;
-    overflow-wrap: break-word; /* Ensure text wraps */
-       
-    text-align: left;
-    vertical-align: middle;      /* Center text horizontally */    
-    border: 1px solid #ccc;
-    min-height: 45px;
+    overflow-wrap: break-word; /* Ensure text wraps */    
+  flex-wrap: wrap; 
+  flex: 1;
+  align-content: center;
+  font-family: "Noto Sans";
   }
-
-  .cds--text-input {
-    font-size: 16px; /* Adjust font size for print */
-    padding: 2px; /* Reduce padding for more space */
-    word-wrap: break-word;
-    white-space: normal;
-    overflow-wrap: break-word; /* Ensure text wraps */
-    padding: 5px;
-  }
-  .bx--field {
-    width: 100%;
-    display: inline-block;
-    box-sizing: border-box;
-  }
+ 
+  
   .help-text {
     font-size: 0.85rem;
     color: #666;
@@ -205,12 +253,21 @@
       page-break-before: always; /* Fallback for older browsers */
     }
 
+    .scrollable-content {
+      width: 100%;
+      /*border: 1px solid #000;*/
+      padding: 0px !important;
+      gap: 0px !important;
+    }
+
     .content-wrapper {     
     display: flex;
     width: 100%;
     padding: 0px !important;
     flex-direction: column;    
-    gap: 42px;
+    gap: 0px !important;
+    /*border: 1px solid #000;*/
+    
     }
     .header-section {      
       display: flex;
@@ -222,11 +279,70 @@
       gap: 10px;  
     } 
       
-  .common-container {          
+  .common-container {         
     
   break-inside: avoid; /* Modern property to prevent page breaks */
-  page-break-inside: avoid; /* Legacy property for compatibility */  
-  
+  page-break-inside: avoid; /* Legacy property for compatibility */       
+    } 
+    
+    .field-wrapper-print {      
+      display: flex !important;     
+      flex-wrap: wrap;     
+      width: 100%;
+      align-items: stretch;
+      /*border: 1px solid #000;*/
+    }
+
+    .field_label-wrapper-print {
+      /*display: flex; */     
+      min-height: 30px;      
+      align-items: flex-start;      
+      border-bottom: 1px solid #919191;
+      background: #F4F4F4 !important;
+      width: 30%;
+      max-width: 180px;
+      -webkit-print-color-adjust: exact;
+      print-color-adjust: exact;
+      height: auto;
+      align-content: center;
+      padding:10px;
       
-    }    
+    }
+
+    .field-label-print {
+      color: #000;
+      font-family: "Noto Sans";
+      font-size: 11px;
+      font-style: normal;
+      font-weight: 300;     
+      
+    }
+
+    .group-item-header {
+      
+      height: 58px;
+      padding: 0px 0px !important;
+      justify-content: space-between;
+      align-items: left;
+      align-self: stretch;
+  
+  } 
+
+  .group-header {
+    color: #000;
+
+    /* Print/Headings/Heading 2 */
+    font-family: "Noto Sans" !important;
+    font-size: 13px !important;
+    font-style: normal !important;
+    font-weight: 600 !important;
+    line-height: 125%;
+    margin-top:20px
+
+} 
+  .text-block {
+    font-family: "Noto Sans" !important;
+    font-size: 11px !important;
+    font-style: normal !important;
+  }  
 }
