--- a/src/page.scss
+++ b/src/page.scss
@@ -175,6 +175,8 @@ margin: auto
   //box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   max-width: 836px;
   margin: auto;
+  min-height: 70px;
+  height: auto;
   .header-image,
   .header-title-buttons {
     display: flex;
